--- a/blog.html
+++ b/blog.html
@@ -4,64 +4,123 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vineet Kumar</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: black;
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
-
-        .header {
-            background-color: #333;
-            padding: 10px 20px;
-            text-align: center;
-        }
-
-        .header h1 {
-            margin: 0;
-            font-size: 2.5em;
-        }
-
-        .container {
-            padding: 20px;
-            text-align: center;
-        }
-
-        .footer {
-            background-color: #333;
-            text-align: center;
-            padding: 10px;
-        }
-
-        .footer a {
-            color: white;
-            text-decoration: none;
-            padding: 0 10px;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title>Vineet Kumar - Blog | Senior QE Manager & Full-Stack SDET Architect</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header class="header">
-        <h1>Coming Soon</h1>
+    <header>
+        <h1 style="margin-bottom: 0.5rem;">Vineet Kumar</h1>
+        <span>contactkrvineet@gmail.com</span>
+        <span>+1 437-428-2199 | +1 301-979-5562</span>
+        <div class="contact-info">
+            <span><b>QE Manager & Full-Stack SDET Architect</b> | <b>AI Evaluation Specialist</b> | <b>16 Years of
+                    Quality Innovation</b></span><br>
+        </div>
+        <div class="button-container">
+            <button class="button-design" onclick="location.href='#projects'">View My Portfolio</button>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="#projects">Automation Frameworks</a></li>
+                    <li><a href="playwright.html">Playwright BDD</a></li>
+                    <li><a href="performance.html">Performance Testing</a></li>
+                    <li><a href="restAssured.html">API Testing</a></li>
+                    <li><a href="about.html#expertise">Technical Skills</a></li>
+                    <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <button class="button-design" onclick="location.href='blog.html'">Case Study</button>
+        </div>
     </header>
-    <div class="container">
-        <h2>Stay Tuned!</h2>
-        <p>We are working hard to bring you something amazing. Check back soon for updates.</p>
-    </div>
-    <footer class="footer">
-        <a href="https://www.facebook.com/contactvineet/" target="_blank">Facebook</a>
-        <a href="https://www.linkedin.com/in/vineet2311/" target="_blank">LinkedIn</a>
-        <a href="https://instagram.com/yourprofile" target="_blank">Instagram</a>
-        <a href="https://github.com/yourprofile" target="_blank">GitHub</a>
-        <a href="https://gitlab.com/yourprofile" target="_blank">GitLab</a>
+    <main class="container blog-main">
+        <h2>Vineet's Blog</h2>
+        <section class="blog-list">
+            <article class="blog-post">
+                <h3>AI in Testing: The New Frontier for QA</h3>
+                <p class="blog-meta">Published: January 2, 2026 | By Vineet Kumar</p>
+                <p>
+                    Artificial Intelligence is rapidly transforming the software testing landscape. From intelligent
+                    test case generation to self-healing automation scripts, AI is enabling QA teams to achieve higher
+                    efficiency and accuracy. As organizations adopt AI-driven solutions, testers must adapt by learning
+                    how to validate, interpret, and challenge AI models. The future of QA will be defined by our ability
+                    to test not just code, but also the intelligence behind it.
+                </p>
+                <a href="#ai-in-testing" class="read-more">Read more</a>
+            </article>
+
+            <!-- Advertisement Space -->
+            <aside class="ad-space">
+                <p>Advertisement</p>
+                <div class="ad-banner">Your Ad Here</div>
+            </aside>
+
+            <article class="blog-post">
+                <h3>The New Era: QA for AI Models</h3>
+                <p class="blog-meta">Published: January 2, 2026 | By Vineet Kumar</p>
+                <p>
+                    As AI adoption accelerates, the role of QA is shifting from traditional application testing to
+                    evaluating AI models for fairness, bias, and reliability. Testers will need to develop new skills in
+                    data validation, model explainability, and ethical AI assessment. This new era demands a blend of
+                    domain expertise, critical thinking, and technical know-how to ensure AI systems are robust and
+                    trustworthy.
+                </p>
+                <a href="#qa-for-ai" class="read-more">Read more</a>
+            </article>
+
+            <article class="blog-post">
+                <h3>Vibium: The Next-Gen QA Tool</h3>
+                <p class="blog-meta">Published: January 2, 2026 | By Vineet Kumar</p>
+                <p>
+                    Vibium is emerging as a powerful tool for modern QA teams, offering advanced analytics, real-time
+                    test monitoring, and seamless integration with CI/CD pipelines. Its AI-driven insights help teams
+                    quickly identify flaky tests, optimize test coverage, and accelerate release cycles. As QA continues
+                    to evolve, tools like Vibium are setting new standards for quality engineering.
+                </p>
+                <a href="#vibium-qa-tool" class="read-more">Read more</a>
+            </article>
+
+            <!-- Advertisement Space -->
+            <aside class="ad-space">
+                <p>Advertisement</p>
+                <div class="ad-banner">Promote your QA product here!</div>
+            </aside>
+
+            <article class="blog-post">
+                <h3>Top Trends in QA for 2026</h3>
+                <p class="blog-meta">Published: January 2, 2026 | By Vineet Kumar</p>
+                <ul>
+                    <li>AI-powered test automation and self-healing scripts</li>
+                    <li>Shift-left testing and continuous quality in DevOps</li>
+                    <li>Testing for ethical AI and model transparency</li>
+                    <li>Cloud-based test environments and parallel execution</li>
+                    <li>Advanced analytics for test optimization</li>
+                </ul>
+                <a href="#qa-trends-2026" class="read-more">Read more</a>
+            </article>
+
+            <article class="blog-post">
+                <h3>Continuous Testing in CI/CD Pipelines</h3>
+                <p class="blog-meta">Published: January 2, 2026 | By Vineet Kumar</p>
+                <p>
+                    Continuous testing is now a cornerstone of modern software delivery. Integrating automated tests
+                    into every stage of the CI/CD pipeline ensures rapid feedback and higher product quality. Explore
+                    best practices for implementing continuous testing and the tools that make it possible.
+                </p>
+                <a href="#continuous-testing" class="read-more">Read more</a>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2026 Vineet Kumar</p>
+        <div class="social-links">
+            <a href="https://www.facebook.com/contactvineet/" target="_blank">Facebook</a>
+            <a href="https://www.linkedin.com/in/vineet2311/" target="_blank">LinkedIn</a>
+            <a href="https://instagram.com" target="_blank">Instagram</a>
+            <a href="https://github.com/contactkrvineet" target="_blank">GitHub</a>
+        </div>
     </footer>
 </body>
 
