--- a/book.html
+++ b/book.html
@@ -15,15 +15,23 @@
         <div class="contact-info">
             <span>contactkrvineet@gmail.com</span>
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-
-            </ul>
-        </nav>
+        <div class="button-container">
+            <button class="button-design" onclick="location.href='#projects'">View My Portfolio</button>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="index.html#projects">Automation Frameworks</a></li>
+                    <li><a href="playwright.html">Playwright BDD</a></li>
+                    <li><a href="performance.html">Performance Testing</a></li>
+                    <li><a href="restAssured.html">API Testing</a></li>
+                    <li><a href="about.html#expertise">Technical Skills</a></li>
+                    <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <button class="button-design" onclick="location.href='blog.html'">Case Study</button>
+        </div>
     </header>
 
 
