--- a/playwright.html
+++ b/playwright.html
@@ -15,15 +15,23 @@
         <div class="contact-info">
             <span>contactkrvineet@gmail.com</span>
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
-
-            </ul>
-        </nav>
+        <div class="button-container">
+            <button class="button-design" onclick="location.href='#projects'">View My Portfolio</button>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Me</a></li>
+                    <li><a href="index.html#projects">Automation Frameworks</a></li>
+                    <li><a href="playwright.html">Playwright BDD</a></li>
+                    <li><a href="performance.html">Performance Testing</a></li>
+                    <li><a href="restAssured.html">API Testing</a></li>
+                    <li><a href="about.html#expertise">Technical Skills</a></li>
+                    <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+            <button class="button-design" onclick="location.href='blog.html'">Case Study</button>
+        </div>
     </header>
 
 
@@ -38,7 +46,9 @@
             </div>
 
             <div class="project-body">
-                <p class="project-overview">This is a comprehensive test automation framework that combines Playwright with Behavior‑Driven Development (BDD) using Cucumber, providing end‑to‑end testing with multiple reporting capabilities.</p>
+                <p class="project-overview">This is a comprehensive test automation framework that combines Playwright
+                    with Behavior‑Driven Development (BDD) using Cucumber, providing end‑to‑end testing with multiple
+                    reporting capabilities.</p>
 
                 <ul class="tick-list" aria-label="Key features">
                     <li>Cross‑Browser Testing: Chromium, Firefox, WebKit</li>
@@ -64,8 +74,10 @@ Feature: User Login
             </div>
 
             <div class="project-footer">
-                <a class="info-link" href="https://gitlab.com/your-username/playwright-bdd-framework" target="_blank" rel="noopener noreferrer">Repository</a>
-                <a class="read-more-button" href="https://contactkrvineet.github.io/playwright-bdd-framework/" target="_blank" rel="noopener noreferrer">Live Demo</a>
+                <a class="info-link" href="https://github.com/contactkrvineet/playwright-bdd-framework" target="_blank"
+                    rel="noopener noreferrer">Repository</a>
+                <a class="read-more-button" href="https://contactkrvineet.github.io/playwright-bdd-framework/"
+                    target="_blank" rel="noopener noreferrer">Live Demo</a>
             </div>
         </div>
     </section>
