--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 <body>
     <header>
 
-        <h1>Vineet Kumar</h1>
+        <h1 style="margin-bottom: 0.5rem;">Vineet Kumar</h1>
         <span>contactkrvineet@gmail.com</span>
         <span>+1 437-428-2199 | +1 301-979-5562</span>
 
@@ -181,7 +181,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <button class="button-design" onclick="location.href='blog.html'">Case Study</button>
+            <button class="button-design" onclick="location.href='blog.html'">Blog</button>
         </div>
 
 
