--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
         </div>
         <div class="button-container">
             <button class="button-design" onclick="location.href='#projects'">View My Portfolio</button>
+            <button class="button-design" onclick="location.href='blog.html'">Blog</button>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -56,7 +57,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <button class="button-design" onclick="location.href='blog.html'">Case Study</button>
+
         </div>
     </header>
 
