--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
         </div>
         <div class="button-container">
             <button class="button-design" onclick="location.href='index.html#projects'">View My Portfolio</button>
+            <button class="button-design" onclick="location.href='blog.html'">Blog</button>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -34,7 +35,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <button class="button-design" onclick="location.href='blog.html'">Case Study</button>
+
         </div>
     </header>
 
