--- a/about.html
+++ b/about.html
@@ -36,10 +36,14 @@
 
 <body>
     <header>
-
-        <h1>Vineet Kumar</h1>
-        <div class="contact-info">
-            <span>contactkrvineet@gmail.com</span>
+        <div style="display:flex;align-items:center;gap:18px;flex-wrap:wrap;">
+            <img src="vineet.png" alt="Vineet Kumar profile picture"
+                style="width:88px;height:88px;border-radius:50%;object-fit:cover;box-shadow:0 2px 8px rgba(0,0,0,0.10);border:2px solid #263159;"
+                loading="lazy">
+            <div>
+                <h1 style="margin-bottom: 0.5rem;">Vineet Kumar</h1>
+                <span>+1 437-428-2199 | +1 301-979-5562 &nbsp;|&nbsp; contactkrvineet@gmail.com</span>
+            </div>
         </div>
         <div class="button-container">
             <button class="button-design" onclick="location.href='#projects'">View My Portfolio</button>
