--- a/blog.html
+++ b/blog.html
@@ -10,15 +10,22 @@
 
 <body>
     <header>
-        <h1 style="margin-bottom: 0.5rem;">Vineet Kumar</h1>
-        <span>contactkrvineet@gmail.com</span>
-        <span>+1 437-428-2199 | +1 301-979-5562</span>
+        <div style="display:flex;align-items:center;gap:18px;flex-wrap:wrap;">
+            <img src="vineet.png" alt="Vineet Kumar profile picture"
+                style="width:88px;height:88px;border-radius:50%;object-fit:cover;box-shadow:0 2px 8px rgba(0,0,0,0.10);border:2px solid #263159;"
+                loading="lazy">
+            <div>
+                <h1 style="margin-bottom: 0.5rem;">Vineet Kumar</h1>
+                <span>+1 437-428-2199 | +1 301-979-5562 &nbsp;|&nbsp; contactkrvineet@gmail.com</span>
+            </div>
+        </div>
         <div class="contact-info">
             <span><b>QE Manager & Full-Stack SDET Architect</b> | <b>AI Evaluation Specialist</b> | <b>16 Years of
                     Quality Innovation</b></span><br>
         </div>
         <div class="button-container">
             <button class="button-design" onclick="location.href='#projects'">View My Portfolio</button>
+            <button class="button-design" onclick="location.href='blog.html'">Blog</button>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
@@ -32,7 +39,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-            <button class="button-design" onclick="location.href='blog.html'">Case Study</button>
+
         </div>
     </header>
     <main class="container blog-main">
