--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
         </div>
 
         <div class="contact-info">
-            <span><b>QE Manager & Full-Stack SDET Architect</b> | <b>AI Evaluation Specialist</b> | <b>16 Years of
+            <span><b>QE Manager @ Publicis Sapient</b> | <b>Full Stack SDET & AI Model Evaluation
+                    Specialist</b> |
+                <b>16 Years of
                     Quality Innovation</b></span><br>
             <div class="contact-summary" style="width:100vw;max-width:100%;margin-left:calc(-50vw + 50%);">
                 <span class="lead">Driving excellence in test automation and quality engineering for Web, Mobile, and
