add TestAutomationPractice page

--- a/about.html
+++ b/about.html
@@ -59,6 +59,7 @@
                     <li><a href="about.html#expertise">Technical Skills</a></li>
                     <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="TestAutomationPlayground.html">Test Automation Playground</a></li>
                 </ul>
             </nav>
 
