--- a/casestudy.html
+++ b/casestudy.html
@@ -64,6 +64,7 @@
                     <li><a href="restAssured.html">API Testing</a></li>
                     <li><a href="casestudy.html" class="active">Case Studies</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="TestAutomationPlayground.html">Test Automation Playground</a></li>
                 </ul>
             </nav>
         </div>
