--- a/restAssured.html
+++ b/restAssured.html
@@ -434,7 +434,7 @@ ALLOWED_ORIGINS=http://localhost:3000
             </ol>
             <hr>
             <h3>📝 License</h3>
-            <p>This project is licensed under the MIT License.</p>
+            <p>This project is licensed under the Vineetkr License.</p>
             <hr>
             <h3>👨‍💻 Author</h3>
             <p><b>Vineet Kumar</b><br>
@@ -445,7 +445,7 @@ ALLOWED_ORIGINS=http://localhost:3000
             <ul>
                 <li>Open an <a href="https://github.com/contactkrvineet/vineetkr-api/issues" target="_blank">Issue</a>
                 </li>
-                <li>Email: contactkrvineet, vineet@vineetkr.com</li>
+                <li>Email: contactkrvineet@gmail.com, vineet@vineetkr.com</li>
             </ul>
             <hr>
             <h3>🎓 Learning Resources</h3>
