--- a/TestAutomationPlayground.html
+++ b/TestAutomationPlayground.html
@@ -22,7 +22,10 @@
             </div>
         </div>
         <div class="button-container">
-            <nav>
+            <nav class="main-nav" aria-label="Main navigation">
+                <button class="nav-toggle" aria-label="Open navigation" aria-expanded="false">
+                    <span class="hamburger"></span>
+                </button>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Me</a></li>
@@ -31,8 +34,8 @@
                     <li><a href="performance.html">Performance Testing</a></li>
                     <li><a href="restAssured.html">API Testing</a></li>
                     <li><a href="about.html#expertise">Technical Skills</a></li>
-                    <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="https://github.com/contactkrvineet" target="_blank">GitHub Portfolio</a></li>
                     <li><a href="TestAutomationPlayground.html">Test Automation Playground</a></li>
                 </ul>
             </nav>
@@ -327,6 +330,20 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script>
+        // Hamburger menu toggle
+        document.addEventListener('DOMContentLoaded', function () {
+            const navToggle = document.querySelector('.nav-toggle');
+            const navLinks = document.querySelector('.nav-links');
+            if (navToggle && navLinks) {
+                navToggle.addEventListener('click', function () {
+                    const expanded = navToggle.getAttribute('aria-expanded') === 'true';
+                    navToggle.setAttribute('aria-expanded', !expanded);
+                    navLinks.classList.toggle('nav-open');
+                });
+            }
+        });
+    </script>
 </body>
 
 </html>
